<resources>
    <string name="app_name">MyZakaat</string>
    <string name="api_key">AIzaSyBlCC5zh9AeN2iCOrpY49_wj7VXjb-Q6G8</string>
    <string name="browser_api_key">AIzaSyAhfT1DGdk2eArijJi8K2GMOvayHS-pK8E</string>
    <string name="action_menu">Menu</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="and"> and </string>
    <string name="comma">, </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_accounts">Accounts</string>
    <string name="btn_add">Add</string>
    <string name="btn_add_new_post">Add New Post</string>
    <string name="btn_add_sticker">Add Sticker</string>
    <string name="btn_add_topic">Add Topic</string>
    <string name="btn_any">Any</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_can_t_login">Can\'t login?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_close">Close</string>
    <string name="btn_comments">Comments</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_create_poll">Create Poll</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_groups">Groups</string>
    <string name="btn_home">Home</string>
    <string name="btn_location">Location</string>
    <string name="btn_log_in">Login</string>
    <string name="btn_login_here">Login Here</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_name">Name</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open">Open</string>
    <string name="btn_open_gallery">Open Gallery</string>
    <string name="btn_open_settings">Open Settings</string>
    <string name="btn_ratings">Ratings</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_register">Register</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_resend">Resend</string>
    <string name="btn_resend_verification_code">Resend Verification Code</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_retain">Retain</string>
    <string name="btn_retake">Retake</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_search">Search</string>
    <string name="btn_select">Select</string>
    <string name="btn_select_country">Select Country</string>
    <string name="btn_select_district">Select District</string>
    <string name="btn_select_location">Select Location</string>
    <string name="btn_select_state">Select State</string>
    <string name="btn_send_verification_code">Send Verification Code</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_share_post">Share Post</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_signup">Signup</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_take_a_photo">Take A Photo</string>
    <string name="btn_take_image">Take Image</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_take_video">Take Video</string>
    <string name="btn_time">Time</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_view_more_comments">View more comments</string>
    <string name="hint_address_1">Address 1</string>
    <string name="hint_city">City</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_confirm_password">Confrim Password</string>
    <string name="hint_country">Country</string>
    <string name="hint_date_numerical">dd/mm/yyyy</string>
    <string name="hint_designation">Designation</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_address"><i>name@example.com</i></string>
    <string name="hint_enter_your_number">Enter Your Phone Number</string>
    <string name="hint_fax">Fax</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_group_name">Group Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_name">Name</string>
    <string name="hint_name_of_school_or_university">Name of School / University</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_otp">OTP Code</string>
    <string name="hint_password"><i>Password</i></string>
    <string name="hint_phone_number">Phone</string>
    <string name="hint_postal_code">Postal Code</string>
    <string name="hint_question">Question</string>
    <string name="hint_region_or_state">Region/State</string>
    <string name="hint_search">Search…</string>
    <string name="hint_select_place">Select Place</string>
    <string name="hint_state">State</string>
    <string name="hint_title">Title</string>
    <string name="hint_type_here">Type here</string>
    <string name="hint_type_something">Type Something…</string>
    <string name="hint_username">Username</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="hint_website">Website</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="label_1_min_ago">1 min ago</string>
    <string name="label_about">About</string>
    <string name="label_add_an_option">Add an option</string>
    <string name="label_add_more">Add More</string>
    <string name="label_add_more_options">Add more options</string>
    <string name="label_added_memebers">Added Memebers</string>
    <string name="label_address">Address</string>
    <string name="label_admin">Admin</string>
    <string name="label_already_have_an_account">Already have an Account?</string>
    <string name="label_approved">Approved</string>
    <string name="label_are_you_new_to_dearest">Are you new to Dearest?</string>
    <string name="label_backup_restore_message">\'Backing up\' means making a copy of your most important files. This can then be used if the original copy is used. Preferably the second copy should be held at a different location to the original and be kept in a secure environment.</string>
    <string name="label_biography">Biography</string>
    <string name="label_birth_place">Birth Place</string>
    <string name="label_button_add">Add</string>
    <string name="label_button_edit">Edit</string>
    <string name="label_call">Call</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_change_number">Change Number</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_country">Country</string>
    <string name="label_create_group">Create</string>
    <string name="label_currently_studying_here">Currently Studying Here</string>
    <string name="label_currently_working_here">Currently Working Here</string>
    <string name="label_date_of_birth">Date Of Birth</string>
    <string name="label_daughter">Daughter</string>
    <string name="label_description">Description</string>
    <string name="label_distance">Distance</string>
    <string name="label_documents">Documents</string>
    <string name="label_driver">Driver</string>
    <string name="label_duration">Duration</string>
    <string name="label_education_details">Education Details</string>
    <string name="label_education_place">Education Place</string>
    <string name="label_email">Email</string>
    <string name="label_enter_the_otp_which_you_will_receive_shortly_via_sms_in_your_contact_number">Enter the OTP which you will receive shortly via sms in your contact number</string>
    <string name="label_enter_the_verification_code">Enter the verification code sent to you</string>
    <string name="label_enter_topic">Enter Topic</string>
    <string name="label_enter_your_current_phone_number_and_email_address_to_change_your_phone_number">Enter your current phone number and email address to change your phone number</string>
    <string name="label_error">Error</string>
    <string name="label_ex_husband">Ex Husband</string>
    <string name="label_ex_wife">Ex Wife</string>
    <string name="label_father">Father</string>
    <string name="label_fax">Fax</string>
    <string name="label_female">Female</string>
    <string name="label_fri">Fri</string>
    <string name="label_from">From</string>
    <string name="label_gender">Gender</string>
    <string name="label_happy_family">Happy Family</string>
    <string name="label_help">Help</string>
    <string name="label_hour_ago">hr ago</string>
    <string name="label_husband">Husband</string>
    <string name="label_i_accept">I Accept</string>
    <string name="label_i_agree_to_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_i_agree_to_the">I Agree to the </string>
    <string name="label_i_agree_to_the_terms_and_conditions">I Agree to the Terms and Conditions</string>
    <string name="label_liked_this_post">liked this post.</string>
    <string name="label_login_here">Login Here</string>
    <string name="label_logout">Logout</string>
    <string name="label_male">Male</string>
    <string name="label_members">Members</string>
    <string name="label_min_ago">min ago</string>
    <string name="label_mon">Mon</string>
    <string name="label_mother">Mother</string>
    <string name="label_my_dearest_countries">My Dearest Countries</string>
    <string name="label_my_dearest_friends">My Dearest Friends</string>
    <string name="label_NA">N/A</string>
    <string name="label_name">Name</string>
    <string name="label_nationality">Nationality</string>
    <string name="label_no_comments_yet">No Comments Yet</string>
    <string name="label_no_data_available">No Data Available</string>
    <string name="label_no_family_trees_available">You are not connected to any family yet. Create your family tree by tapping \"[img src=fab_add/]\" \n\nYou may even search for your family members using the app by tapping \"[img src=ic_action_search_app/]\"</string>
    <string name="label_no_issues_reported">No Issues Reported</string>
    <string name="label_no_locations">No Locations</string>
    <string name="label_not_available">N/A</string>
    <string name="label_note">Note : </string>
    <string name="label_nothing_to_show">Nothing To Show</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_offline">Offline</string>
    <string name="label_online">Online</string>
    <string name="sample_00">00</string>
    <string name="sample_date_numerical">22/02/2017</string>
    <string name="sample_email">abcde@abcde.com</string>
    <string name="sample_name">Name</string>
    <string name="label_total_balance">Total Balance</string>
    <string name="label_interest">Interest</string>
    <string name="label_current_balance">Current Balance</string>
    <string name="label_zakaat_start_date">Zakaat Start Date</string>
    <string name="label_edit_date">Edit Date</string>
    <string name="label_lowest_amount">Lowest Amount</string>
    <string name="label_zakaat_amount">Zakaat Amount</string>
    <string name="btn_view_bank_details">View Bank Details</string>
</resources>