<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">
	
	<data>
		<variable
			name="viewModel"
			type="com.quartzbit.myzakaat.viewModels.HomeViewModel" />
	
	</data>
	
	<androidx.core.widget.NestedScrollView
		style="@style/NestedScrollBarStyle"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".activity.HomeActivity">
		
		<LinearLayout
			style="@style/ActivityParent"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<LinearLayout style="@style/MenuItemParent">
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					style="@style/ItemLabel"
					android:text="@string/label_total_balance" />
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					android:id="@+id/txtHomeTotalBalance"
					style="@style/ItemValue"
					android:text="@string/sample_00" />
			
			</LinearLayout>
			
			<LinearLayout style="@style/MenuItemParent">
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					style="@style/ItemLabel"
					android:text="@string/label_interest" />
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					android:id="@+id/txtHomeInterest"
					style="@style/ItemValue"
					android:text="@string/sample_00" />
			
			</LinearLayout>
			
			<LinearLayout style="@style/MenuItemParent">
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					style="@style/ItemLabel"
					android:text="@string/label_current_balance" />
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					android:id="@+id/txtHomeCurrentBalance"
					style="@style/ItemValue"
					android:text="@string/sample_00" />
			
			</LinearLayout>
			
			<View
				android:layout_width="match_parent"
				android:layout_height="1px"
				android:layout_marginTop="20dp"
				android:layout_marginBottom="20dp"
				android:background="@color/underline_light" />
			
			<LinearLayout style="@style/MenuItemParent">
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					style="@style/ItemLabel"
					android:text="@string/label_zakaat_start_date" />
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					android:id="@+id/txtHomeZakaatStartDate"
					style="@style/ItemValue"
					android:gravity="center"
					android:text="@string/sample_date_numerical" />
			
			</LinearLayout>
			
			<com.quartzbit.myzakaat.widgets.CustomButton
				android:id="@+id/btnHomeEditZakaatStartDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginLeft="5dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:background="@drawable/btn_click_app_rectangle_with_semicircle_edge"
				android:minWidth="100dp"
				android:minHeight="40dp"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:text="@string/label_edit_date"
				android:textColor="@color/white" />
			
			
			<LinearLayout style="@style/MenuItemParent">
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					style="@style/ItemLabel"
					android:text="@string/label_lowest_amount" />
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					android:id="@+id/txtHomeLowestAmount"
					style="@style/ItemValue"
					android:text="@string/sample_00" />
			
			</LinearLayout>
			
			<LinearLayout style="@style/MenuItemParent">
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					style="@style/ItemLabel"
					android:text="@string/label_zakaat_amount" />
				
				<com.quartzbit.myzakaat.widgets.CustomTextView
					android:id="@+id/txtHomeZakaatAmount"
					style="@style/ItemValue"
					android:text="@string/sample_00" />
			
			</LinearLayout>
			
			<com.quartzbit.myzakaat.widgets.CustomButton
				android:id="@+id/btnHomeViewBankDetails"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="40dp"
				android:background="@drawable/btn_click_app_rectangle_with_semicircle_edge"
				android:elevation="5dp"
				android:minWidth="150dp"
				android:minHeight="40dp"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:text="@string/btn_view_bank_details"
				android:textColor="@color/white" />
		
		</LinearLayout>
	
	</androidx.core.widget.NestedScrollView>
</layout>